added social icons in contact us block

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -396,7 +397,32 @@
       <div class="container">
         <h2 class="section-title" style="visibility: visible">Contact</h2>
         <div class="contact-wrapper load-hidden" style="visibility: visible">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <div class="contact-wrapper__icon">
+            <a href="https://www.instagram.com/nityasha_____/" target="_blank" >
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+            </a>
+            <a href="mailto: nityashasinha1999@gmail.com" >           
+           <span class="fa-stack fa-2x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+          <a href="https://www.linkedin.com/in/nityasha-sinha-78aa68189/" target="_blank">
+          <span class="fa-stack fa-2x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+          <a href="https://github.com/Nityashasinha1999" target="_blank">
+          <span class="fa-stack fa-2x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+          </div>
           <div style="text-align: center">
             <a
               rel="noreferrer"
