added blog details and worked on blogs

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <header>
       <div class="container">
         <div class="header-wrap">
+          <a href="./index.html">
           <img
             src="./assets/images/logo.svg"
             style="width: 100px; height: 100px"
           />
+          </a>
           <ul class="menu">
             <li>
               <a href="./index.html" class="active">Home</a>
@@ -388,6 +390,17 @@
                 </a>
               </div>
             </div>
+       
+          </div>
+          <div class="view__more">
+            <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--hero"
+            href="./projects.html"
+          >
+            View More
+          </a>
           </div>
         </div>
       </div>
