--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,16 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <header>
         <div class="container">
             <div class="header-wrap">
+              <a href="./index.html">
                 <img src="./assets/images/logo.svg" style="width: 100px; height: 100px;"/>
+                </a>
                 <ul class="menu">
                     <li>
                         <a href="./index.html">Home</a>
@@ -23,7 +27,7 @@
                         <a href="./projects.html" class="active">Projects</a>
                     </li> 
                     <li>
-                        <a href="./index.html">Blogs</a>
+                        <a href="./blogs.html">Blogs</a>
                     </li> 
                 </ul>
             </div>
@@ -316,6 +320,48 @@
         </div>
       </div>
     </section>
-  
+  <!--contact-->
+  <section id="contact">
+    <div class="container">
+      <h2 class="section-title" style="visibility: visible">Contact</h2>
+      <div class="contact-wrapper load-hidden" style="visibility: visible">
+        <div class="contact-wrapper__icon">
+          <a href="https://www.instagram.com/nityasha_____/" target="_blank" >
+          <span class="fa-stack fa-2x">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+          </span>
+          </a>
+          <a href="mailto: nityashasinha1999@gmail.com" >           
+         <span class="fa-stack fa-2x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+        </span>
+        </a>
+        <a href="https://www.linkedin.com/in/nityasha-sinha-78aa68189/" target="_blank">
+        <span class="fa-stack fa-2x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+        </span>
+        </a>
+        <a href="https://github.com/Nityashasinha1999" target="_blank">
+        <span class="fa-stack fa-2x">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+        </span>
+        </a>
+        </div>
+        <div style="text-align: center">
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            href="mailto:example@email.com"
+            >Call to Action</a
+          >
+        </div>
+      </div>
+    </div>
+  </section>
   </body>
 </html>
